# dfm

./: config.yaml  pyproject.toml  requirements.txt  scratch.py
dfm/: app.py  config.py  install.py  remove.py
dfm/config/: config.yaml
tests/: test_dfm.py
