[tool.poetry]
name = "dfm"
version = "0.1.0"
description = ""
authors = ["Connor Sahleen <Connor.Sahleen@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
dfm = "dfm.app:app"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
